<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="345dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/registro"
            android:textSize="30sp"
            android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/imagenCamara"
                android:layout_width="348dp"
                android:layout_height="111dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/im"
                app:srcCompat="@drawable/user" />

            <ToggleButton
                android:id="@+id/tBTipoR"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:textOff="@string/usuario"
                android:textOn="@string/admin">

            </ToggleButton>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eTNombreR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/direccion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eTDireccionR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/edad">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTEdadR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/telefono">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTTelefonoR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/us">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eTUsuarioR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/correo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eTCorreoR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/pw">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eTContraseniaR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRegistraR"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/aceptar" />

                <Button
                    android:id="@+id/btnCerrarR"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/cancelar" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>