<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="345dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/bienvenido"
                android:textSize="36sp"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/imagenCamara"
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/im"
                app:srcCompat="@drawable/user" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/usuario">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eTUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/pw">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eTPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresar"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btnCerrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cerrar"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/mensaje"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnRegistrar"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/registrar" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>