<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reporte.ReporteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="345dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/reporte"
                android:textSize="30sp"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/ic_menu_camera" />

            <TextView
                android:id="@+id/tVIdRep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:hint="@string/anomalia">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eTAnomalia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:hint="@string/ubicacion">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTUbicacion"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:srcCompat="@drawable/icon_location">
                </ImageButton>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:hint="@string/fecha">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eTFecha"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:srcCompat="@drawable/icon_date">
                </ImageButton>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <Button
                    android:id="@+id/btnAceptarRep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aceptar"
                    android:layout_margin="5dp"
                    />

                <Button
                    android:id="@+id/btnCerrarRep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:layout_margin="5dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>